# examples

./: .gitignore  README.md  pyproject.toml
src/examples/: __init__.py
src/examples/data_loading/profiling/: clean_augmentation_comparison.py  investigate_gpu_timing.py  minimal_gpu_test.py  plot_worker_comparison.py  profile_data_loading_2.py  run_profiling.sh
src/examples/draccus/: README.md  __init__.py  comparison.py
src/examples/draccus/choice_registry/: __init__.py  base_config.py  gpt_config.py  main.py  transformer_config.py
src/examples/draccus/nested/: example.py  example2.py
src/examples/draccus/plugin_registry/: __init__.py  base_config.py  gpt_config.py  main.py  transformer_config.py
src/examples/hydra/: instantiate.py
src/examples/lbm/: check_s3_files_transfer.py
src/examples/mosaicml/: 01_basic.py  02_images.py
src/examples/torch/: check_cuda.py  check_dist.py  check_fsdp2_torch_version.py  diagnose_nccl.py
src/examples/torchvision/: check_gpu_usage.py
src/examples/webdatasets/: __init__.py  sharding.py
