[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "examples"
version = "0.1.0"
description = "Example code demonstrating various patterns and libraries"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Examples Author", email = "author@example.com"}
]
dependencies = [
    "draccus",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "isort", 
    "mypy",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 